# tree-sitter-gcl

./: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  parser.c  scanner.cc
