[package]
name = "tree-sitter-gcl"
description = "GCL grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = [
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "gcl"]
categories = ["parsing", "text-editors"]
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
